# cpp-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
.github/workflows/: ci.yml
MyCppLibrary/: CMakeLists.txt  example.cpp  example.h
cmake/: BuildGoogleTest.cmake  googletest.cmake  grpc.cmake
helloworld/: CMakeLists.txt
include/MyCppLibrary/: CMakeLists.txt  example.cpp  example.h  hello.hpp
test/: CMakeLists.txt  test_example.cpp
tests/: CMakeLists.txt  test_example.cpp
